--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,7 @@
                 android:textSize="36sp"
                 android:textAlignment="center"
                 android:textStyle="bold"
-                android:textColor="@color/purple"/>
+                android:textColor="@color/lavender"/>
 
             <EditText
                 android:layout_width="match_parent"
@@ -65,7 +65,7 @@
                 android:id="@+id/login_button"
                 android:textSize="18sp"
                 android:layout_marginTop="30dp"
-                android:backgroundTint="@color/purple"
+                android:backgroundTint="@color/lavender"
                 app:cornerRadius = "20dp"/>
 
             <TextView
@@ -76,7 +76,7 @@
                 android:layout_gravity="center"
                 android:padding="8dp"
                 android:layout_marginTop="10dp"
-                android:textColor="@color/purple"
+                android:textColor="@color/lavender"
                 android:textSize="18sp"/>
 
         </LinearLayout>
